{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 1218,
  "lineage": "0f014324-12f2-de3b-eea8-38bf65255277",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip_address_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.242.189.65",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-04-06T12:41:10.790-07:00",
            "id": "projects/ci-cd-module/regions/europe-west2/addresses/ipv4-address-prod",
            "name": "ipv4-address-prod",
            "network_tier": "PREMIUM",
            "project": "ci-cd-module",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/regions/europe-west2/addresses/ipv4-address-prod"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip_address_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.105.157.230",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-04-06T12:41:12.006-07:00",
            "id": "projects/ci-cd-module/regions/europe-west2/addresses/ipv4-address-staging",
            "name": "ipv4-address-staging",
            "network_tier": "PREMIUM",
            "project": "ci-cd-module",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/regions/europe-west2/addresses/ipv4-address-staging"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-04-06T12:41:22.624-07:00",
            "enable_cdn": false,
            "fingerprint": "Pd6y3MOr6PA=",
            "health_checks": [
              "projects/ci-cd-module/global/httpHealthChecks/http-health-check"
            ],
            "id": "projects/ci-cd-module/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "ci-cd-module",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "8081",
                  "1000-2000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-06T12:41:10.840-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ci-cd-module/global/firewalls/ilb-example-fw",
            "log_config": [],
            "name": "ilb-example-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/networks/default",
            "priority": 1000,
            "project": "ci-cd-module",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/firewalls/ilb-example-fw",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ilb-example"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "8080",
                  "8090",
                  "8081"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-04-06T12:41:22.550-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ci-cd-module/global/firewalls/terraform-firewall",
            "log_config": [],
            "name": "terraform-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/networks/terraform-example",
            "priority": 1000,
            "project": "ci-cd-module",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/firewalls/terraform-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210325",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/zones/europe-west2-a/disks/staging"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ci-cd-module/zones/europe-west2-a/instances/staging",
            "instance_id": "7802159991644817280",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "tchiquizz:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC++ZB3psGRpXuHgbZGn63myTI3efd/uJnGoE86DAODi05HFECAMmwT9G6bEYIzrUwQcOSr3nJ9so8UoUY8lZPnqaOUGx2dwUOweIZRDmJi9F9EXoApP+21Ii+zyOGaHjHG9KhKMl3uHecoaX/Eknk8KRnkUSoLJbr6xSMbjm9MpWLH3qRi/HInU+RnMgYPA6CumeYZvXlYrKiaNYR5+ZVj9jDTU4bf2DO+4O8hE2/pXfk06+4MWkK7IKDdEcwrA2NLcnQDXNOKlq94UwuYhh/3OAM+EtzcJFy/HomFV+z7EUDrpCjxj5KSbMipsvM+OzEKJX2ukc7OD6DpVJSWe/3kXDMNl2ViS9y9AEIPsMqBsQNrPKP+57IFzg7kKBkvbQ8vdYYnSOOfwUH19aI8s31LiOId5wNOk91CKHBFkI4 [...]
            },
            "metadata_fingerprint": "oqk_jDhfUj8=",
            "metadata_startup_script": "#!/bin/bash\n# This is used as the startup script by the Google compute unit\n# And will start an nginx container as an example\n\n# DEPLOYMENT\nmkdir -p /www/staging\nchmod 777 /www/staging\n\n# NGINX\nsudo yum install nginx\n",
            "name": "staging",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.157.230",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/networks/terraform-example",
                "network_ip": "10.222.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/regions/europe-west2/subnetworks/terraform-example",
                "subnetwork_project": "ci-cd-module"
              }
            ],
            "project": "ci-cd-module",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/zones/europe-west2-a/instances/staging",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "data.template_file.metadata_startup_script_staging",
            "google_compute_address.ip_address_staging",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210325",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/zones/europe-west2-a/disks/production"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ci-cd-module/zones/europe-west2-a/instances/production",
            "instance_id": "7126698048440305536",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "tchiquizz:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC++ZB3psGRpXuHgbZGn63myTI3efd/uJnGoE86DAODi05HFECAMmwT9G6bEYIzrUwQcOSr3nJ9so8UoUY8lZPnqaOUGx2dwUOweIZRDmJi9F9EXoApP+21Ii+zyOGaHjHG9KhKMl3uHecoaX/Eknk8KRnkUSoLJbr6xSMbjm9MpWLH3qRi/HInU+RnMgYPA6CumeYZvXlYrKiaNYR5+ZVj9jDTU4bf2DO+4O8hE2/pXfk06+4MWkK7IKDdEcwrA2NLcnQDXNOKlq94UwuYhh/3OAM+EtzcJFy/HomFV+z7EUDrpCjxj5KSbMipsvM+OzEKJX2ukc7OD6DpVJSWe/3kXDMNl2ViS9y9AEIPsMqBsQNrPKP+57IFzg7kKBkvbQ8vdYYnSOOfwUH19aI8s31LiOId5wNOk91CKHBFkI4 [...]
            },
            "metadata_fingerprint": "st94Iu55Lzc=",
            "metadata_startup_script": "#!/bin/bash\n# This is used as the startup script by the Google compute unit\n# And will start an nginx container as an example\n\nmkdir -p /www/prod\n\n",
            "name": "production",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.242.189.65",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/networks/terraform-example",
                "network_ip": "10.222.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/regions/europe-west2/subnetworks/terraform-example",
                "subnetwork_project": "ci-cd-module"
              }
            ],
            "project": "ci-cd-module",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/zones/europe-west2-a/instances/production",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "data.template_file.metadata_startup_script_prod",
            "google_compute_address.ip_address_prod",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/ci-cd-module/global/networks/terraform-example",
            "name": "terraform-example",
            "project": "ci-cd-module",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/networks/terraform-example"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-06T12:41:22.708-07:00",
            "gateway_address": "10.222.0.1",
            "id": "projects/ci-cd-module/regions/europe-west2/subnetworks/terraform-example",
            "ip_cidr_range": "10.222.0.0/20",
            "name": "terraform-example",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/networks/terraform-example",
            "private_ip_google_access": true,
            "project": "ci-cd-module",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/regions/europe-west2/subnetworks/terraform-example"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-06T12:41:47.272-07:00",
            "id": "projects/ci-cd-module/global/targetHttpsProxies/test-proxy",
            "name": "test-proxy",
            "project": "ci-cd-module",
            "proxy_id": 2966761328770877332,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/targetHttpsProxies/test-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/sslCertificates/ssl-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/urlMaps/url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_ssl_certificate.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-06T12:41:34.534-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "ci-ci module",
            "fingerprint": "wHMXGPE9r4s=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "34.117.15.44"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/ci-cd-module/global/urlMaps/url-map",
            "map_id": 8553949572488038273,
            "name": "url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/backendServices/backend-service",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/home"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/backendServices/backend-service",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "ci-cd-module",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "module.lb.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/zones/europe-west2-a/instanceGroups/ci-cd-module-lb-instance-group",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-04-06T12:41:37.418-07:00",
            "description": "API Backend for ci-cd-module-lb",
            "enable_cdn": false,
            "fingerprint": "Rcl02hUcCbE=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/healthChecks/ci-cd-module-lb-hc"
            ],
            "id": "projects/ci-cd-module/global/backendServices/ci-cd-module-lb-api",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ci-cd-module-lb-api",
            "port_name": "http",
            "project": "ci-cd-module",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/backendServices/ci-cd-module-lb-api",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.lb.google_compute_health_check.default",
            "module.lb.google_compute_instance.api",
            "module.lb.google_compute_instance_group.api"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "module.lb.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-06T12:41:10.735-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ci-cd-module/global/firewalls/ci-cd-module-lb-fw",
            "log_config": [],
            "name": "ci-cd-module-lb-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/networks/default",
            "priority": 1000,
            "project": "ci-cd-module",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/firewalls/ci-cd-module-lb-fw",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "private-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "private-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "api",
      "provider": "module.lb.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210316",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/zones/europe-west2-a/disks/ci-cd-module-lb-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ci-cd-module/zones/europe-west2-a/instances/ci-cd-module-lb-instance",
            "instance_id": "8462116531680118712",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "7XAxj1MebzM=",
            "metadata_startup_script": "#!/bin/bash -xe\n\napt-get update\napt-get install -yq build-essential python-pip rsync\npip install flask\n\nmkdir /app\n\ncat \u003e /app/app.py \u003c\u003c'EOF'\nfrom flask import Flask\napp = Flask(__name__)\n\n@app.route('/api')\ndef hello_api():\n   return 'Hello, api!'\n\napp.run(host='0.0.0.0')\nEOF\n\npython /app/app.py \u0026\n\n",
            "name": "ci-cd-module-lb-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.198.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/networks/default",
                "network_ip": "10.154.0.16",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "ci-cd-module"
              }
            ],
            "project": "ci-cd-module",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/zones/europe-west2-a/instances/ci-cd-module-lb-instance",
            "tags": [
              "private-app"
            ],
            "tags_fingerprint": "4BwUI0kszDU=",
            "zone": "europe-west2-a"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "urlmap",
      "provider": "module.lb.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-06T12:41:49.428-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/backendBuckets/ci-cd-module-lb-backend-bucket",
            "default_url_redirect": [],
            "description": "URL map for ci-cd-module-lb",
            "fingerprint": "8lczfqoUbW8=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "all"
              }
            ],
            "id": "projects/ci-cd-module/global/urlMaps/ci-cd-module-lb-url-map",
            "map_id": 1827655737522849682,
            "name": "ci-cd-module-lb-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/backendBuckets/ci-cd-module-lb-backend-bucket",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "all",
                "path_rule": [
                  {
                    "paths": [
                      "/api",
                      "/api/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/backendServices/ci-cd-module-lb-api",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "ci-cd-module",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/urlMaps/ci-cd-module-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.google_compute_backend_bucket.static",
            "module.lb.google_compute_backend_service.api",
            "module.lb.google_compute_health_check.default",
            "module.lb.google_compute_instance.api",
            "module.lb.google_compute_instance_group.api",
            "module.lb.google_storage_bucket.static"
          ]
        }
      ]
    },
    {
      "module": "module.lb.module.lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "module.lb.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.15.44",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-04-06T12:41:10.662-07:00",
            "id": "projects/ci-cd-module/global/addresses/ci-cd-module-lb-address",
            "name": "ci-cd-module-lb-address",
            "prefix_length": 0,
            "project": "ci-cd-module",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/addresses/ci-cd-module-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.lb.module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "module.lb.provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/ci-cd-module/global/forwardingRules/ci-cd-module-lb-http-rule",
            "ip_address": "34.117.15.44",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ci-cd-module-lb-http-rule",
            "port_range": "80-80",
            "project": "ci-cd-module",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/forwardingRules/ci-cd-module-lb-http-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/ci-cd-module/global/targetHttpProxies/ci-cd-module-lb-http-proxy"
          },
          "dependencies": [
            "module.lb.google_compute_backend_bucket.static",
            "module.lb.google_compute_backend_service.api",
            "module.lb.google_compute_health_check.default",
            "module.lb.google_compute_instance.api",
            "module.lb.google_compute_instance_group.api",
            "module.lb.google_compute_url_map.urlmap",
            "module.lb.google_storage_bucket.static",
            "module.lb.module.lb.google_compute_global_address.default",
            "module.lb.module.lb.google_compute_target_http_proxy.http"
          ]
        }
      ]
    },
    {
      "module": "module.lb.module.lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http",
      "provider": "module.lb.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-06T12:42:01.190-07:00",
            "id": "projects/ci-cd-module/global/targetHttpProxies/ci-cd-module-lb-http-proxy",
            "name": "ci-cd-module-lb-http-proxy",
            "project": "ci-cd-module",
            "proxy_id": 7161965927578273638,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/targetHttpProxies/ci-cd-module-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ci-cd-module/global/urlMaps/ci-cd-module-lb-url-map"
          },
          "dependencies": [
            "module.lb.google_compute_backend_bucket.static",
            "module.lb.google_compute_backend_service.api",
            "module.lb.google_compute_health_check.default",
            "module.lb.google_compute_instance.api",
            "module.lb.google_compute_instance_group.api",
            "module.lb.google_compute_url_map.urlmap",
            "module.lb.google_storage_bucket.static"
          ]
        }
      ]
    }
  ]
}